feat(web-12):category pannel added

--- a/index.html
+++ b/index.html
@@ -77,4 +77,71 @@
       </div>
     </div>
   </div>
+  <div class="category-pannel">
+    <div class="category-items">
+      <div class="item">
+        <div class="item1-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="Top Offers" />
+        </div>
+        <div class="item1-name">Top Offers
+        </div>
+      </div>
+      <div class="item">
+        <div class="item2-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100" alt="Grocery" />
+        </div>
+        <div class="item2-name">Grocery</div>
+      </div>
+      <div class="item">
+        <div class="item3-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100" alt="Mobiles" />
+        </div>
+        <div class="item3-name">Mobiles</div>
+      </div>
+      <div class="item">
+        <div class="item4-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/c12afc017e6f24cb.png?q=100" alt="Fashion" />
+        </div>
+        <div class="item4-name">Fashion
+          <span class="material-symbols-outlined">expand_more</span>
+        </div>
+      </div>
+      <div class="item">
+        <div class="item5-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100" alt="Electronics" />
+        </div>
+        <div class="item5-name">Electronics
+          <span class="material-symbols-outlined">expand_more</span>
+        </div>
+      </div>
+      <div class="item">
+        <div class="item6-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100" alt="Home" />
+        </div>
+        <div class="item6-name">Home
+          <span class="material-symbols-outlined">expand_more</span>
+        </div>
+      </div>
+      <div class="item">
+        <div class="item7-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100" alt="Appliances" />
+        </div>
+        <div class="item7-name">Appliances
+          <span class="material-symbols-outlined">expand_more</span>
+        </div>
+      </div>
+      <div class="item">
+        <div class="item8-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100" alt="Travel" />
+        </div>
+        <div class="item8-name">Travel</div>
+      </div>
+      <div class="item">
+        <div class="item9-image">
+          <img src="https://rukminim1.flixcart.com/flap/128/128/image/dff3f7adcf3a90c6.png?q=100" alt="Beauty, Toys & More" />
+        </div>
+        <div class="item9-name">Beauty, Toys & More</div>
+      </div>
+    </div>
+  </div>
 </body>
