feat(web-12):products pannel and ad inserted

--- a/index.html
+++ b/index.html
@@ -144,4 +144,113 @@
       </div>
     </div>
   </div>
+  <div class="products-container">
+    <div class="deal-ad-container">
+      <div class="deal-container">
+        <div class="deal-of-the-day">
+          <div class="deal-text-timer">
+            <div class="deal-text">Deals of the Day</div>
+            <div class="timer">
+              <span class="material-symbols-outlined">
+                timer
+                </span> <div class="time">
+                  22 : 07 : 36 Left
+                </div> 
+            </div>
+          </div>
+          <div class="view-all"><a class="view-all-button">VIEW ALL</a></div>
+        </div>
+        <div class="products-list-1">          
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/kuczmvk0/cases-covers/back-cover/w/w/t/m-12954-colorcase-original-imag7g7knnn66wdh.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Plain Cases & Covers</div>
+              <div class="product-price">Under ₹169</div>
+              <div class="product-company-name">For All Top Models</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/l12h1u80/cases-covers/back-cover/v/7/9/sgf235g-pat367-my-thing-original-imagcprak4yhdbh5.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Designer Cases & Covers</div>
+              <div class="product-price">Just ₹169</div>
+              <div class="product-company-name">For Top Models</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/kzzw5u80/coffee/s/b/x/-original-imagbwf3wvhzfh5z.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Coffee Powder</div>
+              <div class="product-price">Upto 80% Off</div>
+              <div class="product-company-name">Nescafe</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/printer/j/j/y/hp-laserjet-m1005-multifunction-original-imadxhzpeb9qbrfg.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Printers</div>
+              <div class="product-price">From 3999</div>
+              <div class="product-company-name">HP</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/jlph9jk0/cycle/h/f/k/skyper-26t-sskp26bk0001-16-hero-original-imaf8ru5xysfgtmx.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Non-Geared Cycles</div>
+              <div class="product-price">Up to 40% Off</div>
+              <div class="product-company-name">Hercules, Hero & More</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/l5ld8y80/monitor/l/k/s/-original-imagg897ufhyvwqq.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Monitors</div>
+              <div class="product-price">From ₹9999</div>
+              <div class="product-company-name">SAMSUNG</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/kactpjk0/shaver/m/6/z/philips-s1121-45-s1121-45-original-imafry2qgxcwnm9r.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Best of Shavers</div>
+              <div class="product-price">From ₹1,649</div>
+              <div class="product-company-name">Philips & Havells</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/krtjgcw0/headphone/d/9/g/au-mh501-maono-original-imag5j35rffkwpac.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Printers</div>
+              <div class="product-price">From 3999</div>
+              <div class="product-company-name">HP</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/jlph9jk0/cycle/h/f/k/skyper-26t-sskp26bk0001-16-hero-original-imaf8ru5xysfgtmx.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Printers</div>
+              <div class="product-price">From 3999</div>
+              <div class="product-company-name">HP</div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="https://rukminim1.flixcart.com/image/200/200/krtjgcw0/headphone/d/9/g/au-mh501-maono-original-imag5j35rffkwpac.jpeg?q=70" alt="printer"/>
+              </div>
+              <div class="product-name">Printers</div>
+              <div class="product-price">From 3999</div>
+              <div class="product-company-name">HP</div>
+            </div>    
+        </div>
+      </div>
+      <div class="ad-container">
+        <div class="more-products">
+          More Products
+        </div>
+        <div class="view-all-ad">
+          VIEW ALL
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
