--- a/index.html
+++ b/index.html
@@ -253,4 +253,99 @@
       </div>
     </div>
   </div>
+  <div class="products-container">
+    <div class="deal-ad-container-2">
+      <div class="music-book-container">
+        <div class="deal-of-the-day">
+          <div class="book-music-title">
+            <div class="deal-text">Books And music Instruments</div>
+            <div class="shop-now">Shop Now!</div>
+          </div>
+          <div class="view-all"><a class="view-all-button">VIEW ALL</a></div>
+        </div>
+        <div class="products-list-1">          
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/312/312/kqidx8w0/book/4/r/i/short-stories-from-panchatantra-original-imag4hvtypz5zsuc.jpeg?q=70" alt="panchtantra"/>
+            </div>
+            <div class="product-name">Panchatantra</div>
+            <div class="product-price">₹63</div>
+            <div class="product-company-name">By Miss & Chief</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/150/150/j8osu4w0-1/electric-guitar/s/r/m/pacifica-pac012-black-yamaha-original-imaeynhxcy29ddzm.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Electric Guitars</div>
+            <div class="product-price">Up to 65% Off</div>
+            <div class="product-company-name">Yamaha & More</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/kzzw5u80/coffee/s/b/x/-original-imagbwf3wvhzfh5z.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Coffee Powder</div>
+            <div class="product-price">Upto 80% Off</div>
+            <div class="product-company-name">Nescafe</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/printer/j/j/y/hp-laserjet-m1005-multifunction-original-imadxhzpeb9qbrfg.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Printers</div>
+            <div class="product-price">From 3999</div>
+            <div class="product-company-name">HP</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/jlph9jk0/cycle/h/f/k/skyper-26t-sskp26bk0001-16-hero-original-imaf8ru5xysfgtmx.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Non-Geared Cycles</div>
+            <div class="product-price">Up to 40% Off</div>
+            <div class="product-company-name">Hercules, Hero & More</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/l5ld8y80/monitor/l/k/s/-original-imagg897ufhyvwqq.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Monitors</div>
+            <div class="product-price">From ₹9999</div>
+            <div class="product-company-name">SAMSUNG</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/kactpjk0/shaver/m/6/z/philips-s1121-45-s1121-45-original-imafry2qgxcwnm9r.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Best of Shavers</div>
+            <div class="product-price">From ₹1,649</div>
+            <div class="product-company-name">Philips & Havells</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/krtjgcw0/headphone/d/9/g/au-mh501-maono-original-imag5j35rffkwpac.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Printers</div>
+            <div class="product-price">From 3999</div>
+            <div class="product-company-name">HP</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/jlph9jk0/cycle/h/f/k/skyper-26t-sskp26bk0001-16-hero-original-imaf8ru5xysfgtmx.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Printers</div>
+            <div class="product-price">From 3999</div>
+            <div class="product-company-name">HP</div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="https://rukminim1.flixcart.com/image/200/200/krtjgcw0/headphone/d/9/g/au-mh501-maono-original-imag5j35rffkwpac.jpeg?q=70" alt="printer"/>
+            </div>
+            <div class="product-name">Printers</div>
+            <div class="product-price">From 3999</div>
+            <div class="product-company-name">HP</div>
+          </div>    
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
