--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Online Shopping Site for Mobiles, Electronics, 
     Furniture, Grocery, Lifestyle, Books & More. Best Offers!</title>
-  <link rel="icon" type="image/x-icon" href="https://static-assets-web.flixcart.com/www/promos/new/20150528-140547-favicon-retina.ico%22">
+    <link rel="shortcut icon"
+    href="https://static-assets-web.flixcart.com/www/promos/new/20150528-140547-favicon-retina.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="style.css">
 </head>
